# fuzzy-vala

./: fuzzy-gnome.vapi  fuzzy-vala.vapi  meson.build
src/: match.c  match.h
